# semestralka_pexeso

./: CMakeLists.txt  client.c  pexeso.h  server.c
